--- a/server/CMakeLists.txt
+++ b/server/CMakeLists.txt
@@ -14,12 +14,12 @@ add_dependencies(kurento kmsiface-project)
 target_link_libraries(kurento kmsiface mediaspec ${THRIFT_LIBRARIES})
 target_link_libraries(kurento ${GSTREAMER_LIBRARIES} ${GLIBMM_LIBRARIES})
 target_link_libraries(kurento ${UUID_LIBRARIES} kmsclib)
-include_directories(kurento ${kmsc-project_BINARY_DIR})
+include_directories(kurento ${CMAKE_BINARY_DIR})
 include_directories(kurento ${THRIFT_INCLUDE_DIRS} ${GLIBMM_INCLUDE_DIRS})
 include_directories(kurento ${GSTREAMER_INCLUDE_DIRS})
 include_directories(kurento ${UUID_INCLUDE_DIRS})
 include_directories(kurento ${KMSIFACE_INCLUDE_DIR} ${CMAKE_SOURCE_DIR}/server)
-include_directories(kurento ${kmsc-project_SOURCE_DIR}/src/core)
-include_directories(kurento ${kmsc-project_SOURCE_DIR}/src)
+include_directories(kurento ${CMAKE_SOURCE_DIR}/src/core)
+include_directories(kurento ${CMAKE_SOURCE_DIR}/src)
 
 install(TARGETS kurento RUNTIME DESTINATION usr/bin)
