Add nellymosser to example configuration

--- a/kurento.conf
+++ b/kurento.conf
@@ -39,10 +39,18 @@ direction=sendrecv
 type=video
 
 [Media audioRtmp]
-codecs=amr;pcma
+codecs=amr;pcma;nellymosser
 transport=rtmpTransport
 direction=sendrecv
 type=audio
+
+[Codec nellymosser]
+rtp=nellymosser
+
+[CodecRtp nellymosser]
+name=nellymosser
+clockRate=8000
+channels=1
 
 [Codec amr]
 rtp=amr
