--- a/server/CMakeLists.txt
+++ b/server/CMakeLists.txt
@@ -1,6 +1,6 @@
 aux_source_directory("types" TYPES)
 
-SET(KMSC_SOURCE main.cpp log.cpp media_config_loader.cpp version.cpp MediaServerServiceHandler.cpp
+SET(KMSC_SOURCE main.cpp media_config_loader.cpp version.cpp MediaServerServiceHandler.cpp
 						${TYPES})
 SET_SOURCE_FILES_PROPERTIES(${KMSC_SOURCE}
 		PROPERTIES COMPILE_FLAGS
