Use GstSDPMessage to store the SDP from config.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -29,6 +29,7 @@ find_package(PkgConfig)
 
 pkg_check_modules(GLIB2 REQUIRED glib-2.0>=2.30)
 pkg_check_modules(GSTREAMER REQUIRED gstreamer-1.0>=1.0.5)
+pkg_check_modules(GSTREAMER_SDP REQUIRED gstreamer-sdp-1.0>=1.0.5)
 pkg_check_modules(THRIFT REQUIRED thrift-nb>=0.9.0)
 pkg_check_modules(EVENT REQUIRED libevent>=2.0.16-stable)
 pkg_check_modules(GLIBMM REQUIRED glibmm-2.4>=2.30)
