Add ConcurrentMap and MediaSet classes.
These classes are useful to manage internal objects.

Issue: #128
Change-Id: I7136f0e992e7912200d07f78301ea5ece9281b95

--- a/server/CMakeLists.txt
+++ b/server/CMakeLists.txt
@@ -1,7 +1,8 @@
+aux_source_directory("common" COMMON)
 aux_source_directory("types" TYPES)
 
 SET(KMSC_SOURCE main.cpp media_config_loader.cpp version.cpp MediaServerServiceHandler.cpp
-              ${TYPES})
+              ${COMMON} ${TYPES})
 SET_SOURCE_FILES_PROPERTIES(${KMSC_SOURCE}
 		PROPERTIES COMPILE_FLAGS
 		-DHAVE_NETINET_IN_H -DUSE_BOOST_THREAD -DHAVE_INTTYPES_H)
