Add missing library that ubuntu seems to need
Change-Id: I4cb7656d4834f92dd9db0fdfca2376c04bc9765b

--- a/server/CMakeLists.txt
+++ b/server/CMakeLists.txt
@@ -14,7 +14,7 @@ target_link_libraries(kurento kmsiface ${THRIFT_LIBRARIES} ${EVENT_LIBRARIES})
 target_link_libraries(kurento ${GSTREAMER_LIBRARIES} ${GLIBMM_LIBRARIES})
 target_link_libraries(kurento ${GSTREAMER_SDP_LIBRARIES} )
 target_link_libraries(kurento ${UUID_LIBRARIES})
-target_link_libraries(kurento ${GLIB2_LIBRARIES})
+target_link_libraries(kurento ${GLIB2_LIBRARIES} -lpthread)
 include_directories(kurento ${CMAKE_BINARY_DIR})
 include_directories(kurento ${THRIFT_INCLUDE_DIRS} ${GLIBMM_INCLUDE_DIRS})
 include_directories(kurento ${GSTREAMER_INCLUDE_DIRS})
