Fix log for server_memory_test
Change-Id: If3316652bdaf8f243f06f0f2f40e609d00f6f83b

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -56,7 +56,7 @@ enable_testing()
 if (DEFINED MEMORY_TEST)
   message("Memory test actived")
   add_test(server_memory_test test/server_memory_test)
-  set_tests_properties(server_memory_test PROPERTIES ENVIRONMENT "GST_DEBUG=*Media*:5,server_test:5")
+  set_tests_properties(server_memory_test PROPERTIES ENVIRONMENT "GST_DEBUG=*Media*:5,server_memory_test:5")
 else()
   add_test(server_test test/server_test)
   set_tests_properties(server_test PROPERTIES ENVIRONMENT "GST_DEBUG=*Media*:5,server_test:5")
