Compile gst-kurento-plugins as submodule
Change-Id: I9fb643a7186ce5731050cdb81c9ea6a87c34a00c

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "kms-interface"]
 	path = kms-interface
 	url = ../../kms/kms-interface
+[submodule "gst-kurento-plugins"]
+	path = gst-kurento-plugins
+	url = ../../kms/gst-kurento-plugins
