Load SDP pattern from config
Change-Id: Id6461cbe65a60f2f42dacc7ed1b42f77e030d650

--- a/kurento.conf
+++ b/kurento.conf
@@ -2,90 +2,4 @@
 [Server]
 serverAddress=localhost
 serverPort=9090
-sessionPort=9091
-connectionPort=9092
-mixerPort=9093
-
-medias=audioRtp;videoRtp;audioRtmp;videoRtmp
-
-[Transport rtpTransport]
-rtp=rtpTransport
-
-[Transport rtmpTransport]
-rtmp=rtmpTransport
-
-[TransportRtp rtpTransport]
-address=localhost
-
-[TransportRtmp rtmpTransport]
-url=rtmp://flashserver/application
-
-[Media videoRtp]
-codecs=h263;mp4;h264
-transport=rtpTransport
-direction=sendrecv
-type=video
-
-[Media audioRtp]
-codecs=amr;pcma
-transport=rtpTransport
-direction=sendrecv
-type=audio
-
-[Media videoRtmp]
-codecs=h263;mp4;h264
-transport=rtmpTransport
-direction=sendrecv
-type=video
-
-[Media audioRtmp]
-codecs=amr;pcma;nellymosser
-transport=rtmpTransport
-direction=sendrecv
-type=audio
-
-[Codec nellymosser]
-rtp=nellymosser
-
-[CodecRtp nellymosser]
-name=nellymosser
-clockRate=8000
-channels=1
-
-[Codec amr]
-rtp=amr
-
-[CodecRtp amr]
-name=AMR
-clockRate=8000
-channels=1
-extra=octet-align
-octet-align=1
-
-[Codec pcma]
-rtp=pcma
-
-[CodecRtp pcma]
-name=pcma
-clockRate=8000
-
-[Codec h263]
-rtp=h263
-
-[CodecRtp h263]
-name=h263-1998
-clockRate=90000
-
-[Codec mp4]
-rtp=mp4
-
-[CodecRtp mp4]
-name=mp4v-es
-clockRate=90000
-
-[Codec h264]
-rtp=h264
-
-[CodecRtp h264]
-name=h264
-clockRate=90000
+sdpPattern=/etc/kurento/pattern.sdp
