Add initial skeleton for http end point server library
Change-Id: I58f964608eaa6202ff5a243715f1a4edd2d0e8a3

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -50,6 +50,8 @@ SET(KMSIFACE_INCLUDE_DIR ${CMAKE_BINARY_DIR}/gen-cpp)
 
 add_subdirectory(kms-interface)
 
+add_subdirectory(httpepserver)
+
 add_subdirectory(server)
 
 add_subdirectory(test)
