--- a/server/CMakeLists.txt
+++ b/server/CMakeLists.txt
@@ -12,12 +12,14 @@ SET_SOURCE_FILES_PROPERTIES(${KMSC_SOURCE}
 add_executable(kurento ${KMSC_SOURCE})
 add_dependencies(kurento kmsiface)
 
+target_link_libraries(kurento kmshttpep)
 target_link_libraries(kurento kmsiface ${THRIFT_LIBRARIES} ${EVENT_LIBRARIES})
 target_link_libraries(kurento ${GSTREAMER_LIBRARIES} ${GLIBMM_LIBRARIES})
 target_link_libraries(kurento ${GSTREAMER_SDP_LIBRARIES} )
 target_link_libraries(kurento ${UUID_LIBRARIES})
 target_link_libraries(kurento ${GLIB2_LIBRARIES} -lpthread)
 target_link_libraries(kurento ${Boost_FILESYSTEM_LIBRARY} ${Boost_SYSTEM_LIBRARY})
+include_directories(kurento ${CMAKE_SOURCE_DIR}/httpepserver)
 include_directories(kurento ${CMAKE_BINARY_DIR})
 include_directories(kurento ${THRIFT_INCLUDE_DIRS} ${GLIBMM_INCLUDE_DIRS})
 include_directories(kurento ${GSTREAMER_INCLUDE_DIRS})
