Add server_test always
Change-Id: I5c8a6d1762ed99b4a6c2c309123f8c07184c234b

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -61,17 +61,17 @@ add_subdirectory(test)
 
 enable_testing()
 
-if (DEFINED MEMORY_TEST)
-  message("Memory test actived")
-  add_test(server_memory_test test/server_memory_test)
-  set_tests_properties(server_memory_test PROPERTIES ENVIRONMENT "MEDIA_SERVER_CONF_FILE=${CMAKE_SOURCE_DIR}/kurento.conf")
-else()
-  add_test(server_test test/server_test)
-  set_tests_properties(server_test PROPERTIES ENVIRONMENT "MEDIA_SERVER_CONF_FILE=${CMAKE_SOURCE_DIR}/kurento.conf")
-endif()
+add_test(server_test test/server_test)
+set_tests_properties(server_test PROPERTIES ENVIRONMENT "MEDIA_SERVER_CONF_FILE=${CMAKE_SOURCE_DIR}/kurento.conf")
 
 add_test(http_ep_server_test test/http_ep_server_test)
 set_tests_properties(http_ep_server_test PROPERTIES ENVIRONMENT "MEDIA_SERVER_CONF_FILE=${CMAKE_SOURCE_DIR}/kurento.conf")
+
+if (DEFINED MEMORY_TEST)
+  message("Memory test active")
+  add_test(server_memory_test test/server_memory_test)
+  set_tests_properties(server_memory_test PROPERTIES ENVIRONMENT "MEDIA_SERVER_CONF_FILE=${CMAKE_SOURCE_DIR}/kurento.conf")
+endif()
 
 add_custom_target(check COMMAND ${CMAKE_CTEST_COMMAND})
 
