Compile plugins as a dependency of kurento, not only when cmake is executed
Change-Id: I8aafb5949f6815ac847e207e320bb69948ca5d26

--- a/server/CMakeLists.txt
+++ b/server/CMakeLists.txt
@@ -11,6 +11,7 @@ SET_SOURCE_FILES_PROPERTIES(${KMSC_SOURCE}
 
 add_executable(kurento ${KMSC_SOURCE})
 add_dependencies(kurento kmsiface)
+add_dependencies(kurento plugins)
 
 target_link_libraries(kurento kmshttpep)
 target_link_libraries(kurento kmsiface ${THRIFT_LIBRARIES} ${EVENT_LIBRARIES})
