--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -24,8 +24,8 @@ endif(EXISTS "${CMAKE_SOURCE_DIR}/.git")
 set (GSTREAMER_PLUGINS_DIR ${CMAKE_BINARY_DIR}/plugins)
 
 execute_process(COMMAND bash autogen.sh --prefix=${GSTREAMER_PLUGINS_DIR} WORKING_DIRECTORY ${CMAKE_SOURCE_DIR}/gst-kurento-plugins)
-execute_process(COMMAND make WORKING_DIRECTORY ${CMAKE_SOURCE_DIR}/gst-kurento-plugins)
-execute_process(COMMAND make install WORKING_DIRECTORY ${CMAKE_SOURCE_DIR}/gst-kurento-plugins)
+
+add_custom_target(plugins COMMAND make install WORKING_DIRECTORY ${CMAKE_SOURCE_DIR}/gst-kurento-plugins)
 
 CONFIGURE_FILE(${CMAKE_CURRENT_SOURCE_DIR}/config.h.cmake ${CMAKE_CURRENT_BINARY_DIR}/config.h)
 
