Add a new option to HttpEPServer to provide an address to compose URLs
Change-Id: Ie49f7ea3f16702402bb5dc1da43cf471737ef650

--- a/kurento.conf
+++ b/kurento.conf
@@ -5,4 +5,11 @@ sdpPattern=pattern.sdp
 
 [HttpEPServer]
 #serverAddress=localhost
+
+# Announced IP Address may be helpful under situations such as the server needs
+# to provide URLs to clients whose host name is different from the one the
+# server is listening in. If this option is not provided, http server will try
+# to look for any available address in your system.
+# announcedAddress=localhost
+
 serverPort=9091
