Add utilities to marshal and unmarshal strings
Change-Id: I4df9a765d449f64783bc94a322080dfd7fb3c640

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -61,6 +61,8 @@ add_subdirectory(test)
 
 enable_testing()
 
+add_test(utils_test test/utils_test)
+
 add_test(server_test test/server_test)
 set_tests_properties(server_test PROPERTIES ENVIRONMENT "MEDIA_SERVER_CONF_FILE=${CMAKE_SOURCE_DIR}/kurento.conf")
 
