Update implementation for new thrift interface
Test compilation is disable temporally.

Change-Id: I592d4e300815f10c059daea9e875dd38094ff344

--- a/server/CMakeLists.txt
+++ b/server/CMakeLists.txt
@@ -2,9 +2,10 @@ find_package(Boost COMPONENTS system filesystem REQUIRED)
 
 aux_source_directory("common" COMMON)
 aux_source_directory("types" TYPES)
+aux_source_directory("utils" UTILS)
 
 SET(KMSC_SOURCE main.cpp version.cpp MediaServerServiceHandler.cpp
-              ${COMMON} ${TYPES})
+              ${COMMON} ${TYPES} ${UTILS})
 SET_SOURCE_FILES_PROPERTIES(${KMSC_SOURCE}
 		PROPERTIES COMPILE_FLAGS
 		-DHAVE_NETINET_IN_H -DUSE_BOOST_THREAD -DHAVE_INTTYPES_H)
