--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -31,7 +31,17 @@ if (0)
 add_executable(server_test server_test_base.cpp server_test.cpp sdp_end_point_test.cpp)
 endif ()
 
-add_executable(server_test server_test_base.cpp server_test.cpp ${UTILS})
+set(CFLAGS "-DHAVE_NETINET_IN_H ")
+if (DEFINED KMS_TEST)
+  message("KMS_TEST set")
+  set(CFLAGS ${CFLAGS}"-DKMS_TEST ")
+endif ()
+
+set(SERVER_TEST_SOURCE server_test server_test_base.cpp server_test.cpp ${UTILS})
+set_source_files_properties(${SERVER_TEST_SOURCE}
+                PROPERTIES COMPILE_FLAGS ${CFLAGS})
+
+add_executable(${SERVER_TEST_SOURCE})
 add_dependencies(server_test kmsiface-project)
 add_dependencies(server_test kurento)
 
