Add functions to pointer detector to add, remove and clear windows
Change-Id: Ie005e2bec08b9381c51a4c5528293f396dcc4961

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -56,7 +56,7 @@ add_definitions(-DBOOST_TEST_DYN_LINK)
 
 set(CFLAGS "-DHAVE_NETINET_IN_H ")
 
-set(SERVER_TEST_SOURCE server_test_base.cpp server_test.cpp sdp_end_point_test.cpp ${UTILS})
+set(SERVER_TEST_SOURCE server_test_base.cpp server_test.cpp sdp_end_point_test.cpp ../server/common/Operators.cpp ${UTILS})
 set_source_files_properties(${SERVER_TEST_SOURCE}
                 PROPERTIES COMPILE_FLAGS ${CFLAGS})
 
